@@ -893,5 +893,5 @@ INSERT INTO `gibbonPermission` (`permissionID` ,`gibbonRoleID` ,`gibbonActionID`
 UPDATE gibboni18n SET active='Y' WHERE code='pl_PL';end
 UPDATE gibbonSetting set description='The timezone where the school is located' WHERE name='timezone' AND scope='System';end
 UPDATE gibbonSetting SET value='' WHERE scope='Finance' AND name='email' AND value='finance@ichk.edu.hk';end
-
+ALTER TABLE `gibbonHouse` CHANGE `name` `name` VARCHAR(30) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL;end
 ";
