@@ -62,6 +62,7 @@ v16.0.00
 		Students: changed School Attendance sub page to Attendance to improve UI consistency
 		Students: adjusted logic in student enrolment visualisation to include students who are not 'Full'
 		School Admin: updated Finance Settings email to default to organisation email if blank
+		School Admin: extend length of name field in Manage Houses to 30 chars
 		System Admin: fixed bug causing theme names with spaces to break the theme installer
 		System Admin: fixed spelling error in Department settings
 		User Admin: fixed Child's Name list in Edit Family to include all students
